# rag

./: .env.example  .env.opik  .gitignore  BEFORE_AFTER_COMPARISON.md  BUGFIX_COMPLETE_REPORT.md  BUGFIX_CONTEXT_SLIDER_RESET.md  BUGFIX_DOCUMENTATION_INDEX.md  BUGFIX_FINAL_REPORT.md  BUGFIX_FLOW_DIAGRAM.md  BUGFIX_GENERATE_QUESTIONS.md  BUGFIX_OVERVIEW.md  BUGFIX_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_COMPARISON.md  CONFIGURATION_CHECK.md  DELIVERY_SUMMARY.txt  Dockerfile  ENHANCED_OPIK_GUIDE.md  HOW_OPIK_WORKS.py  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LOGGING_COMPLETE_SUMMARY.md  LOGGING_DELIVERY_COMPLETE.md  OPIK_CLOUD_SETUP_COMPLETE.md  PORT_FIX_COMPLETE.md  QUICKREF_BUGFIX.md  QUICK_REFERENCE.md  RAG_IMPROVEMENTS_GUIDE.md  README.md  REDESIGN_PROFESSIONAL_UI.md  ROOT_CLEANUP_PROPOSAL.txt  TESTING_GUIDE.md  TEST_RESULTS.md  check_health.py  check_m2_coverage.py  clear_faiss.py  debug_chunks.py  debug_m2_mileage.py  debug_rag.py  docker-compose.opik.yml  (+21 more)
Helping docs/: Chunking strategy
backend/: __init__.py  config.py  docling_client.py  docling_reranker.py  ingest.py  llm_loader.py  logger_config.py  main.py  main_refactored.py  opik_config.py  quiz.py  rag_engine.py  vectorstore.py
backend/api/: __init__.py  middleware.py
backend/services/: __init__.py  chat_service.py  document_service.py  quiz_service.py  settings_service.py  tracked_chat_service.py
config/: env.template
docs/: DATASETS_IMPLEMENTATION.md  DATASETS_QUICKSTART.md  DATASETS_QUICK_REFERENCE.md  DATASETS_SUMMARY.md  DATASET_COMMANDS_REFERENCE.md  DATASET_HOW_TO_CHECK.md  DATASET_QUERY_FLOW.md  DATASET_SIMPLE_OVERVIEW.md  ENHANCED_OPIK_README.md  IMPLEMENTATION_COMPLETE_DATASETS.md  LOGGING_ARCHITECTURE.md  LOGGING_BEST_PRACTICES.md  LOGGING_COMPLETE_DELIVERY.md  LOGGING_DAY_WISE_STRUCTURE.md  LOGGING_DELIVERABLES.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_IMPROVEMENTS.md  LOGGING_INDEX.md  LOGGING_INTEGRATION_GUIDE.md  LOGGING_MIGRATION_EXAMPLES.md  LOGGING_QUICK_REFERENCE.md  LOGGING_QUICK_START.md  LOGGING_START_HERE.md  LOGGING_TEMPLATES.md  MODEL_COMPARISON_IMPLEMENTATION.md  NEXT_STEPS_OPIK.md  OPIK_API_KEY_FIX.md  OPIK_AUTO_LOGGING_IMPLEMENTATION.md  OPIK_QUERY_TRACKING_ISSUE.md  OPIK_QUICK_FIX.md  OPIK_SETUP.md  OPIK_SETUP_COMPLETE.md  QUERY_LOGGING_SUMMARY.md  QUICK_FIX_REFERENCE.md  RAG_Project_Presentation.md  README.md  UPGRADE_GUIDE.md  opik_workflow.html  pipx_workflow.md  rag_workflow_detailed.html  (+1 more)
docs/architecture/: README.md  SYSTEM_PROCESSES.md
docs/frontend/: 00_START_HERE.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  COMPLETION_CHECKLIST.md  DELIVERY_REPORT.md  DEVELOPER_GUIDE.md  DIRECTORY_STRUCTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PARTITION_LAYOUT.md  QUICKSTART.md  README.md  README_STREAMLINED.md  SIMPLE_SETUP.md  SIMPLIFICATION_REPORT.md  START_HERE.md  STREAMLINED.md  STREAMLINED_GUIDE.md
docs/guides/: ARCHITECTURE_REFINEMENT_GUIDE.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  NEW_FILES_REFERENCE.md  README.md  README_REFINEMENTS.md  REFINEMENT_COMPLETION_REPORT.md  REFINEMENT_IMPLEMENTATION_SUMMARY.md  REFINEMENT_VISUAL_SUMMARY.txt  SYSTEM_TEST_REPORT.md
docs/knowledge-base/: README.md  manifest.yaml
documents/md/: API_DOCS.md  DOCUMENTATION_INDEX.md  FILE_MANIFEST.md  GROQ_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  (+7 more)
flows/: API_FLOWS.md  DATA_ARCHITECTURE.md  FLOW_DIAGRAMS.md  GETTING_STARTED.md  GLOSSARY.md  INDEX.md  OPERATION_FLOW.html  PROJECT_GUIDE.md  QUICK_REFERENCE.md  VISUAL_SUMMARY.md
frontend/: .env.example  DOCUMENTATION_INDEX.md  ENHANCEMENTS_FINAL_REPORT.md  FEATURE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PROCESS_FLOW_SUMMARY.md  README_IMPLEMENTATION.md  SYSTEM_INFO_QUICK_REF.md  SYSTEM_INFO_SUMMARY.md  UI_ENHANCEMENTS_COMPLETE.md  UI_LAYOUT_REFERENCE.md  UI_VISUAL_GUIDE.md  VERIFICATION_CHECKLIST.md  VISUAL_LAYOUT_DIAGRAM.md  app.py  app_backup.py  app_enhanced.py  app_minimal.py  app_old.py  app_scroll.py  config.py  requirements.txt
scripts/: check_health.py  create_test_excel.py  daily_log_maintenance.py  document_list.py  extract_questions.py  final_demo.py  migrate_to_neural_embeddings.py  setup_enhanced_logging.py  test_model_comparison.py
tests/: __init__.py  conftest.py  test_ingest.py  test_rag_engine.py  test_vectorstore.py
(+88 files in other folders)
